[win][qt6] Fix transparent canvas widget issue

It seems like Qt6 properly supports transparent widget textures,
so, if we write non-opaque pixels over it, the widget also becomes
transparent.

To fix the issue, we should use a blend function with explicit
switch to avoid writing into the alpha channel of the final widget
texture.

BUG:517102